# data-platform-template

./: README.md  cookiecutter.json
.circleci/: config.yml
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml  pytest.ini
{{cookiecutter.project_slug}}/.circleci/: config.yml
{{cookiecutter.project_slug}}/.github/: CODEOWNERS
{{cookiecutter.project_slug}}/tests/: test__init__.py  test_main.py
{{cookiecutter.project_slug}}/tests/echo/: test_echo.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  echo.py  main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/resources/: test_file.sql
