[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.poetry]
authors = ["{{cookiecutter.project_name}} <{{cookiecutter.email}}>"]
description = "{{cookiecutter.description}}"
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"

[tool.poetry.scripts]
{{cookiecutter.project_executable}} = "{{cookiecutter.project_slug}}.main:run"

[tool.poetry.dependencies]
datadog = "^0.41.0"
python = "^{{cookiecutter.python_version}}"
rollbar = "^0.15.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
isort = "^5.8.0"
mypy = "^0.812"
pylint = "^2.8.2"
pytest = "^6.2.3"
pytest-mock = "^3.6.0"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pylint.messages_control]
disable = """,
    bad-continuation,
    bad-whitespace,
    missing-module-docstring,
    pointless-statement,
    duplicate-code,
"""

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.design]
max-args = "8"

[tool.pylint.master]
ignore = "tests,CVS"
jobs = "0"
